--- a/portfolio.html
+++ b/portfolio.html
@@ -10,12 +10,131 @@
         <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" 
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
+
+
+
     </head>
     <body>
         <header>
             <div class="logo">
-                <img src=""
+                <img src="" alt="">
             </div>
+            <button class="nav-toggle" aria-label="toggle-navigation">
+                <span class="hamburger"></span>
+            </button>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
+                    <li class="nav__item"><a href="#work" class="nav__link">My work</a></li>
+                </ul>
+            </nav>
         </header>
+
+        <!-- Introduction -->
+        <section class="intro" id="home">
+            <h1 class="section___title section__title--intro">
+                Hi, I am <strong>Mensur Sejdinović</strong>
+            </h1>
+            <p class="section__subtitle section__subtitle--intro">web dev</p>
+            <img src="img/portfolio-1.jpg" alt="">
+        </section>
+
+
+        <!-- My services -->
+        <section class="my-services" id="services">
+            <h2 class="section-title section__title--services">What I do</h2>
+            <div class="services">
+                <div class="service">
+                    <h3>Design + Development</h3>
+                    <p>Lorem ipsum sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div> <!-- / service -->
+
+                <div class="service">
+                    <h3>E-commerce</h3>
+                    <p>Lorem ipsum sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div> <!-- / service -->
+
+                <div class="service">
+                    <h3>Wordpress</h3>
+                    <p>Lorem ipsum sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div> <!-- / service -->
+            </div> <!-- / services -->
+
+            <a href="#work" class="btn">My Work</a>
+        </section>
+
+
+        <!-- About me -->
+        <section class="about-me" id="about">
+            <h2 class="section__title section__title--about">Who I am</h2>
+            <p class="section__subtitle section__subtitle--about"></p>
+
+            <div class="about-me__body">
+                <p></p>
+                <p></p>
+            </div>
+
+            <img src="" alt="">
+        </section>
+
+
+        <!-- My Work -->
+        <section class="my-work" id="work">
+            <h2 class="section__title">My work</h2>
+            <p class="section__subtitle"></p>
+
+            <div class="portfolio">
+                <!-- Portfolio item 01 -->
+                <a href="#" class="portfolio__item">
+                    <img src="portfolio-1.jpg" alt="" class="portfolio__img">
+                </a>
+
+                <!-- Portfolio item 01 -->
+                <a href="#" class="portfolio__item">
+                    <img src="portfolio-1.jpg" alt="" class="portfolio__img">
+                </a>
+
+                <!-- Portfolio item 01 -->
+                <a href="#" class="portfolio__item">
+                    <img src="portfolio-1.jpg" alt="" class="portfolio__img">
+                </a>
+
+                <!-- Portfolio item 01 -->
+                <a href="#" class="portfolio__item">
+                    <img src="portfolio-1.jpg" alt="" class="portfolio__img">
+                </a>
+
+                <!-- Portfolio item 01 -->
+                <a href="#" class="portfolio__item">
+                    <img src="portfolio-1.jpg" alt="" class="portfolio__img">
+                </a>
+
+                <!-- Portfolio item 01 -->
+                <a href="#" class="portfolio__item">
+                    <img src="portfolio-1.jpg" alt="" class="portfolio__img">
+                </a>
+            </div>
+        </section>
+
+
+        <!-- Footer -->
+        <footer>
+            <a href="mailto:mensursejdinovic@gmail.com" class="footer__link">mensursejdinovic@gmail.com</a>
+            <ul class="social-list">
+                <li class="social-list__item"><a class="social-list__link"
+                href="https://codepen.io">a</a></li>
+                <li class="social-list__item"><a class="social-list__link"
+                href="https://dribbble.com">b</a></li>
+                <li class="social-list__item"><a class="social-list__link"
+                href="https://twitter.com">c</a></li>
+                <li class="social-list__item"><a class="social-list__link"
+                href="https://github.com">d</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
