--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,10 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" 
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
 
+        <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans
+        +Pro:300,900&display=swap" rel="stylesheet">
 
+        <link rel="stylesheet" href="css/style.css">
 
     </head>
     <body>
@@ -37,8 +40,8 @@
             <h1 class="section___title section__title--intro">
                 Hi, I am <strong>Mensur Sejdinović</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">web dev</p>
-            <img src="img/portfolio-1.jpg" alt="">
+            <p class="section__subtitle section__subtitle--intro">.Net developer</p>
+            <img src="img/portfolio-1.jpg" alt="" class="intro__img">
         </section>
 
 
@@ -72,69 +75,60 @@
         <!-- About me -->
         <section class="about-me" id="about">
             <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about"></p>
+            <p class="section__subtitle section__subtitle--about">.Net developer</p>
 
             <div class="about-me__body">
-                <p></p>
-                <p></p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
             </div>
 
-            <img src="" alt="">
+            <img src="img/portfolio-1.jpg" alt="" class="about-me__img">
         </section>
 
 
         <!-- My Work -->
         <section class="my-work" id="work">
-            <h2 class="section__title">My work</h2>
-            <p class="section__subtitle"></p>
+            <h2 class="section__title section__title--work">My work</h2>
+            <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
 
-            <div class="portfolio">
-                <!-- Portfolio item 01 -->
-                <a href="#" class="portfolio__item">
-                    <img src="portfolio-1.jpg" alt="" class="portfolio__img">
-                </a>
+                <div class="portfolio">
+                    <!-- Portfolio item 01 -->
+                    <a href="portfolio-item.html" class="portfolio__item">
+                        <img src="img/portfolio-01.jpg" alt="" class="portfolio__img">
+                    </a>
 
-                <!-- Portfolio item 01 -->
-                <a href="#" class="portfolio__item">
-                    <img src="portfolio-1.jpg" alt="" class="portfolio__img">
-                </a>
+                    <!-- Portfolio item 01 -->
+                    <a href="portfolio-item-2.html" class="portfolio__item">
+                        <img src="img/portfolio-02.png" alt="" class="portfolio__img">
+                    </a>
 
-                <!-- Portfolio item 01 -->
-                <a href="#" class="portfolio__item">
-                    <img src="portfolio-1.jpg" alt="" class="portfolio__img">
-                </a>
-
-                <!-- Portfolio item 01 -->
-                <a href="#" class="portfolio__item">
-                    <img src="portfolio-1.jpg" alt="" class="portfolio__img">
-                </a>
-
-                <!-- Portfolio item 01 -->
-                <a href="#" class="portfolio__item">
-                    <img src="portfolio-1.jpg" alt="" class="portfolio__img">
-                </a>
-
-                <!-- Portfolio item 01 -->
-                <a href="#" class="portfolio__item">
-                    <img src="portfolio-1.jpg" alt="" class="portfolio__img">
-                </a>
-            </div>
+                    <!-- Portfolio item 01 -->
+                    <a href="portfolio-item-3.html" class="portfolio__item">
+                        <img src="img/portfolio-03.png" alt="" class="portfolio__img">
+                    </a>
+                </div>
         </section>
 
 
         <!-- Footer -->
-        <footer>
+        <footer class="footer">
             <a href="mailto:mensursejdinovic@gmail.com" class="footer__link">mensursejdinovic@gmail.com</a>
             <ul class="social-list">
-                <li class="social-list__item"><a class="social-list__link"
-                href="https://codepen.io">a</a></li>
-                <li class="social-list__item"><a class="social-list__link"
-                href="https://dribbble.com">b</a></li>
-                <li class="social-list__item"><a class="social-list__link"
-                href="https://twitter.com">c</a></li>
-                <li class="social-list__item"><a class="social-list__link"
-                href="https://github.com">d</a></li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://github.com/Mensur00">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://www.linkedin.com/in/mensur-sejdinovic-5a55b2194/">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </li>
             </ul>
         </footer>
+
+
+        <script src="js/index.js"></script>
+
     </body>
 </html>
