--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="#skills" class="nav__link">My Skills</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
                     <li class="nav__item"><a href="#work" class="nav__link">My work</a></li>
                 </ul>
@@ -45,30 +45,27 @@
         </section>
 
 
-        <!-- My services -->
-        <section class="my-services" id="services">
-            <h2 class="section-title section__title--services">What I do</h2>
-            <div class="services">
-                <div class="service">
-                    <h3>Design + Development</h3>
-                    <p>Lorem ipsum sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div> <!-- / service -->
+        <!-- My skills -->
+        <section class="my-skills" id="skills">
+            <h2 class="section-title section__title--skills">Skills</h2>
+            <div class="skills">
+                <div class="skill">
+                    <h3>ASP.NET</h3>
+                    <p>Creating ASP.NET MVC web apps using MVC arhitecture pattern.</p>
+                </div> <!-- / skill -->
 
-                <div class="service">
-                    <h3>E-commerce</h3>
-                    <p>Lorem ipsum sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div> <!-- / service -->
+                <div class="skill">
+                    <h3>Windows Forms .Net</h3>
+                    <p>Using Visual Studio I create Windows Forms smart-client apps that display information, request input from users, and communicate with remote computers over a network.</p>
+                </div> <!-- / skill -->
 
-                <div class="service">
-                    <h3>Wordpress</h3>
-                    <p>Lorem ipsum sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div> <!-- / service -->
-            </div> <!-- / services -->
+                <div class="skill">
+                    <h3>Entity framework</h3>
+                    <p>Working with data in apps in the form of domain-specific objects and properties, such as customers and customer addresses, without having to concern themselves with the underlying database tables and columns where this data is stored.</p>
+                </div> <!-- / skill -->
+            </div> <!-- / skills -->
 
-            <a href="#work" class="btn">My Work</a>
+            <a href="#work" class="btn">see my work</a>
         </section>
 
 
@@ -78,8 +75,7 @@
             <p class="section__subtitle section__subtitle--about">.Net developer</p>
 
             <div class="about-me__body">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p></p>
             </div>
 
             <img src="img/portfolio-1.jpg" alt="" class="about-me__img">
