--- a/portfolio-item-2.html
+++ b/portfolio-item-2.html
@@ -28,7 +28,7 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="portfolio.html" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="portfolio.html#services" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="portfolio.html#skills" class="nav__link">My Skills</a></li>
                     <li class="nav__item"><a href="portfolio.html#about" class="nav__link">About me</a></li>
                     <li class="nav__item"><a href="portfolio.html#work" class="nav__link">My work</a></li>
                 </ul>
