--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -28,7 +28,7 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="portfolio.html" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="portfolio.html#services" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="portfolio.html#skills" class="nav__link">My Skills</a></li>
                     <li class="nav__item"><a href="portfolio.html#about" class="nav__link">About me</a></li>
                     <li class="nav__item"><a href="portfolio.html#work" class="nav__link">My work</a></li>
                 </ul>
@@ -38,14 +38,15 @@
         <!-- Introduction -->
         <section class="intro">
             <h1 class="section___title section__title--intro">
-                The title <strong>of my project</strong>
+                First project<strong>Vidly</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">A short subtitle</p>
+            <p class="section__subtitle section__subtitle--intro">app for renting movies</p>
             <img src="img/portfolio-01.jpg" alt="" class="intro__img">
         </section>
         
         <div class="portfolio-item-1-individual">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+            <p>Vidly is small application for renting movies.Vidly is built with ASP.NET, MVC, C# and SQL.</p>
+            <p>The front end was developed with HTML, Javascript and Bootstrap. The backend utilizes MVC and C#. The database was built with SQL Server.</p>
         </div>
 
 
