--- a/portfolio.html
+++ b/portfolio.html
@@ -72,10 +72,10 @@
         <!-- About me -->
         <section class="about-me" id="about">
             <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about">.Net developer</p>
+            <p class="section__subtitle section__subtitle--about">entry-level .Net developer</p>
 
             <div class="about-me__body">
-                <p></p>
+                <p>I'm Mensur - a self-taught .Net developer, looking to start the career as an entry-level software developer with a reputed firm.</p>
             </div>
 
             <img src="img/portfolio-1.jpg" alt="" class="about-me__img">
